--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ant-design-vue": "^4.2.6",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "echarts": "^6.0.0",
+    "echarts": "^5.4.0",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "pinia": "^2.3.0",
@@ -50,6 +50,7 @@
     "@commitlint/config-conventional": "^18.6.3",
     "@mistjs/cli": "0.0.1-beta.9",
     "@mistjs/vite-plugin-preload": "^0.0.1",
+    "@types/echarts": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.13",
     "@types/lodash-es": "^4.17.12",
