--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-VITE_APP_BASE_API=/api
-VITE_APP_BASE_URL=https://api.antdv-pro.com
+VITE_APP_BASE_API=https://www.jianyuanlanren.cn/api
+VITE_APP_BASE_URL=https://www.jianyuanlanren.cn/api
 # The title of your application (string)
 VITE_GLOB_APP_TITLE="antdv-pro"
+VITE_APP_BASE=/shopadmin/
